css/theme-custom.css
/* ... */
.background-image-holder img {
  display: none;
}
.background-multiply .background-image-holder {
  background-color: #333347 !important;
  background-blend-mode: multiply;
}
.background-image-holder.fadeIn {
  opacity: 1;
}
.parallax > .background-image-holder,
.parallax .slides li > .background-image-holder {
  height: 100vh;
  top: -50vh;
  transition: all 0s ease !important;
   transform-style: preserve-3d;
}
.parallax:first-child .slides li > .background-image-holder,
.parallax:first-child .background-image-holder {
  top: 0;
}
.main-container > a:first-child + .parallax .background-image-holder {
  top: 0;
}
@media all and (max-width: 767px) {
  .parallax > .background-image-holder,
  .parallax .slides li > .background-image-holder {
    top: 0 !important;
    transform: none !important;
  }
}
/*!---------- 6. BUTTONS ----------*/
.btn {
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
  border: 2px solid #13313E;
  padding: 0 26px;
  height: 40px;
  min-width: 150px;
  line-height: 36px;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-radius: 0;
  color: #13313E;
  text-align: center;
  transition: all 0.3s ease;
  margin-right: 8px;
  margin-bottom: 24px;
}
.btn:last-child,
.btn:last-of-type {
  margin-right: 0;
}
.btn:hover {
  background: #13313E;
  color: #fff;
}
.btn-icon {
  width: 40px;
  height: 40px;
  font-size: 20px;
  min-width: 0;
  padding: 0;
  line-height: 38px;
}
.btn-lg {
  height: 50px;
  line-height: 46px;
  min-width: 200px;
}
.btn-icon.btn-lg {
  width: 50px;
  height: 50px;
  line-height: 49px;
  font-size: 24px;
  min-width: 0;
}
.btn-icon.btn-sm {
  width: 30px;
  height: 30px;
  line-height: 29px;
  font-size: 13px;
  min-width: 0;
  padding: 0 0 0 1px!important;
}
.btn-sm {
  height: 30px;
  font-size: 11px;
  line-height: 27px;
  min-width: 0;
}
.btn-filled {
  background: #13313E;
  color: #fff;
}
.btn-white,
.image-bg .btn,
.image-bg .btn:visited {
  color: #FFE082;
  border-color: #FFE082;
}
.btn-white:hover,
.image-bg .btn:hover,
.image-bg .btn:visited:hover {
  background: #FFE082;
  color: #13313E;
}
.image-bg .btn.btn-filled,
.image-bg .btn-filled:visited {
  border-color: #13313E;
}
.image-bg .btn-filled:hover {
  border-color: #fff;
}
.btn-rounded {
  border-radius: 25px;
}
body.btn-rounded .btn {
  border-radius: 25px !important;
}
.bg-light .btn {
  border-color: #222;
  color: #222;
}
.bg-light .btn:visited,
.bg-light .btn:visited:hover {
  color: #222;
}
.bg-light .btn-filled,
.bg-light .btn-filled:visited {
  color: #fff;
}
.btn:visited {
  color: #13313E;
}
.btn-white:visited,
.btn:visited:hover {
  color: #fff;
}
.btn-white:visited:hover {
  color: #fff;
}
.btn-filled:visited {
  color: #fff;
}
.btn.bg-dark {
  color: #FFE082;
  border-color: #FFE082;
}
.btn.bg-dark:hover {
  color: #13313E;
  background: #FFE082;
}
.bg-primary .btn {
  color: #fff;
  border-color: #fff;
}
.bg-primary .btn:hover {
  background: #fff;
  color: #13313E;
}
/*!---------- 7. NAVIGATION ----------*/
.nav-container {
  backface-visibility: hidden; 
  max-width: 100%;
}
nav {
  background: #fff;
  backface-visibility: hidden; 
  max-width: 100%;
}
nav ul {
  margin-bottom: 0;
}
.module {
  display: inline-block;
  padding: 0 32px;
}
.module-group {
  display: inline-block;
}
.module.left,
.module-group.left {
  float: left;
}
.module.right,
.module-group.right {
  float: right;
}
nav .btn,
.nav-bar .btn {
  margin: 0;
  height: auto;
}
.nav-utility {
  height: 45px;
  line-height: 43px;
  border-bottom: 1px solid #ccc;
  overflow: hidden;
}
.nav-utility i {
  position: relative;
  top: 1px;
}
.nav-bar {
  height: 55px;
  max-height: 55px;
  line-height: 53px;
  border-bottom: 1px solid #ccc;
}
.nav-bar .module,
.nav-bar .module-group {
  height: 55px;
}
.nav-bar a {
  display: inline-block;
  height: 55px;
}
.logo {
  max-height: 50%;
}
.logo-light {
  display: none;
}
nav.nav-centered .logo {
  max-height: 64px;
  margin: 64px 0 40px 0;
}
nav.bg-dark .logo-light {
  display: inline;
}
nav.bg-dark .logo-dark {
  display: none;
}
.has-dropdown {
  padding-right: 18px;
}
.has-dropdown:after {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 11px;
  content: "\e64b";
  font-family: 'themify';
  
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
}
.menu {
  width: 100%;
  height: 55px;
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.menu.inline-block {
  width: auto;
}
.menu li a {
  font-size: 11px;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  color: #292929;
  opacity: 0.75;
  transition: all 0.3s ease;
  max-width: 100%;
  white-space: normal;
}
.menu li a:hover {
  opacity: 1 !important;
}
.menu > li {
  margin-right: 32px;
  float: left;
  position: relative;
  transition: all 0.3s ease;
  opacity: 1;
}
.menu > li:last-child {
  margin-right: 0;
}
.menu > li:last-child > ul {
  right: 0;
}
.menu > li:last-child > ul ul {
  left: auto;
  right: 100%;
}
.menu > li ul {
  width: 200px;
  padding: 8px 0;
  background: #dedede;
  position: absolute;
  z-index: 99;
  opacity: 0;
  transition: all 0.3s ease;
  transform: translate3d(0, 10px, 0);
  visibility: hidden;
  margin-top: -1px;
}
.menu > li > ul > li {
  position: relative;
  line-height: 24px;
  width: 100%;
  vertical-align: top;
}
.menu > li > ul > li i {
  display: inline-block;
  margin-right: 2px;
}
.menu > li > ul > .has-dropdown:after {
  color: #fff;
  top: 5px;
  right: 24px;
  content: "\e649";
}
.menu > li > ul li a {
  color: #292929;
  height: auto;
  padding: 6px 24px;
}
.menu > li > ul > li > ul {
  left: 100%;
  top: 0;
}
.menu > li:hover > ul {
  opacity: 1;
  transform: translate3d(0, 0, 0);
  visibility: visible;
}
.menu > li > ul > li:hover > ul,
.has-dropdown:hover .mega-menu ul {
  opacity: 1;
  transform: translate3d(0, 0, 0);
  visibility: visible;
}
/* ... */

